agregado de favico y cambio de titulo

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,15 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="">
 
-	<title>FCancer</title>
+	
+
+	<!-- Ico y titulo-->
+
+	<link rel="icon" href="img/ic_barra_amate.png" type="image/x-icon"/>
+	<title>Ámate - Cuida tu Salud</title>
 
 	<!-- Estilos CSS -->
+
 
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="css/web/web.css">  
