--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
 	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material-data-table/0.10.10/md-data-table.css" />
 
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.4/angular-material.css" />
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.8/angular-material.css" />
 
 
 
@@ -98,7 +98,7 @@
 			
 			<a class="md-button seccionMenu" md-ink-ripple="#fffffff" ng-click="goSeccion('preguntas')" >
 				<div>
-					<i  style="font-size:20px;" class="fa fa-heart iconSeccionMenu " aria-hidden="true"></i>
+					<i  style="font-size:20px;" class="fa fa-leanpub iconSeccionMenu " aria-hidden="true"></i>
 					<span >
 						Aprende sobre el cáncer
 					</span>
@@ -110,6 +110,15 @@
 					<i  style="font-size:20px;" class="fa fa-gift iconSeccionMenu " aria-hidden="true"></i>
 					<span >
 						Premios y puntos
+					</span>
+				</div>
+			</a>
+
+			<a class="md-button seccionMenu" md-ink-ripple="#fffffff"  ng-click="goSeccion('acerca')" >
+				<div>
+					<i  style="font-size:20px;" class="fa fa-heart iconSeccionMenu " id="heart" aria-hidden="true"></i>
+					<span >
+						Acerca de FPTC
 					</span>
 				</div>
 			</a>
@@ -132,7 +141,7 @@
 
 		</div>
 
-		<div style="bottom: 20px;  " class="footNav">
+		<div style="bottom: 20px; display: none " class="footNav">
 			<a href="http://leadis.co/" target="_blank">
 				<img style="width:50%; margin-left: 25%; " src="img/powered-leadis-gris.png">
 			</a>
@@ -151,6 +160,7 @@
 				<md-button class="md-fab " ng-click="toggleLeft(); estado();" style=" display: {{prueba.parentProperty}};    margin-left: 330px;height:46px !important; width:46px !important;   position: fixed;
 				" aria-label="Comment">
 				<i style="font-size:24px;" class="fa fa-navicon " aria-hidden="true"></i>
+
 			</md-button>
 
 		</div>
@@ -233,7 +243,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0-rc.0/angular-messages.min.js"></script>
 
 <!-- Angular Material Library -->
-<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.8/angular-material.min.js"></script>
 
 
 <script type="text/javascript" src="js/componentesJS/angular-route.js"></script>
